#1 Update .gitignore and remove obsolete files
- Updated `.gitignore` to include additional Visual Studio files.
- Deleted binary files: `CodeChunks.db`, `SemanticSymbols.db`, `.wsuo`, and `slnx.sqlite`.
- Cleared content from `DocumentLayout.json` and `VSWorkspaceState.json`.

--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,10 @@ CodeCoverage/
 TestResult.xml
 nunit-*.xml
 /.vs/CollectionManager
+/.vs/CollectionManager/CopilotIndices/17.14.670.39694/CodeChunks.db
+/.vs/CollectionManager/CopilotIndices/17.14.670.39694/SemanticSymbols.db
+/.vs/CollectionManager/v17/.wsuo
+/.vs/CollectionManager/v17/DocumentLayout.json
+/.vs/slnx.sqlite
+/.vs/VSWorkspaceState.json
+/CollectionManager.FrontEnd/CollectionManager.Angular/.vscode
