#1 Update .gitignore to exclude workspace files
Added entries to the .gitignore file to ignore various Visual Studio workspace files and settings, as well as specific files related to the CollectionManager project. This prevents these files from being tracked in the version control system.

--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,4 @@ nunit-*.xml
 /.vs/slnx.sqlite
 /.vs/VSWorkspaceState.json
 /CollectionManager.FrontEnd/CollectionManager.Angular/.vscode
+/CollectionManager.Backend/.vs/CollectionManager.Backend
