#2  Add i18n support and integrate Tailwind CSS
This commit introduces internationalization (i18n) support for Polish localization in the Angular application. It adds new dependencies for Tailwind CSS and tw-elements, along with new components (`MenuComponent` and `TopBarComponent`).

Key changes include:
- Updated `angular.json` for i18n configurations and build options.
- Modified `package.json` and `package-lock.json` to include new dependencies.
- Restructured `AppComponent` to incorporate new components.
- Updated `main.ts` for Angular localization reference.
- Adjusted `styles.scss` to utilize Tailwind CSS and tw-elements.
- Updated TypeScript configuration files for localization types.
- Created new translation files for English and Polish.
- Added `.postcssrc.json` for PostCSS configuration.
- Updated `read.me` with instructions for extracting i18n strings.

--- a/CollectionManager.FrontEnd/CollectionManager.Angular/angular.json
+++ b/CollectionManager.FrontEnd/CollectionManager.Angular/angular.json
@@ -4,6 +4,16 @@
   "newProjectRoot": "projects",
   "projects": {
     "CollectionManager.Angular": {
+      "i18n": {
+        "sourceLocale": "en-US",
+        "locales": {
+          
+          "pl": {
+            "translation": "src/locale/messages.pl.xlf"
+           
+          }
+        }
+      },
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -41,11 +51,15 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
+            "localize": [
+              "pl"
+            ],
             "outputPath": "dist/collection-manager.angular",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
-              "zone.js"
+              "zone.js",
+              "@angular/localize/init"
             ],
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
@@ -58,7 +72,9 @@
             "styles": [
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/tw-elements/js/tw-elements.umd.min.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -104,7 +120,8 @@
           "options": {
             "polyfills": [
               "zone.js",
-              "zone.js/testing"
+              "zone.js/testing",
+              "@angular/localize/init"
             ],
             "tsConfig": "tsconfig.spec.json",
             "inlineStyleLanguage": "scss",
@@ -117,7 +134,9 @@
             "styles": [
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/tw-elements/js/tw-elements.umd.min.js"
+            ]
           }
         }
       }
